--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,18 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.core:core-ktx:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    // implementation 'com.znvip.nicepop:nicepop:1.0.0'
     implementation project(path: ':nicepop')
+
+    // implementation 'com.android.support:design:28.0.0'
+    // implementation 'com.znvip.nicebottomsheet:nicebottomsheet:1.0.0'
     implementation project(path: ':nicebottomsheet')
 }
